Fix CI Cent OS 8 configuration issue (workaround)
- reverts commit 94578ec62abf23679af8557bde48e26e1b7bc7d7
  to reenable voting for checkbashisms and pre-commit

Mirrorlist URLs have been archived and moved to Cent OS vault.
https://forums.centos.org/viewtopic.php?t=78708&start=30
https://forums.centos.org/viewtopic.php?t=80698
This impacts Jenkins minions configuration.

- force vault use in yum repos config till this is fixed upstream

Change-Id: I87831c5fe4cb81031f75d42762e1ad16e296a3e5
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 minversion = 3.7.0
-envlist = buildcontroller
+envlist =
+     buildcontroller
      testsPCE
      sims121
      build_karaf_tests121
@@ -324,7 +325,9 @@ allowlist_externals = sh
                       checkbashisms
                       sudo
                       find
+                      fixCIcentOS8reposMirrors.sh
 commands =
+    ./fixCIcentOS8reposMirrors.sh
     sh -c 'command checkbashisms>/dev/null || sudo yum install -y devscripts-checkbashisms || sudo yum install -y devscripts-minimal || sudo yum install -y devscripts \
         || sudo yum install -y https://archives.fedoraproject.org/pub/archive/fedora/linux/releases/31/Everything/x86_64/os/Packages/d/devscripts-checkbashisms-2.19.6-2.fc31.x86_64.rpm \
         || (echo "checkbashisms command not found - please install it \
@@ -400,7 +403,16 @@ commands =
 basepython = python3
 deps = pre-commit
 passenv = HOME
+allowlist_externals = sh
+                      cpan
+                      sudo
+                      which
+                      fixCIcentOS8reposMirrors.sh
 commands =
+    ./fixCIcentOS8reposMirrors.sh
+    sh -c 'which cpan || sudo yum install -y perl-CPAN  \
+        || (echo "cpan command not found - please install it \
+             (e.g. sudo apt-get install perl-modules | yum install perl-CPAN )" >&2 && exit 1)'
     pre-commit run --all-files --show-diff-on-failure
     pre-commit run gitlint-ci --hook-stage manual
 
