Improve lightynode installation process
The same version of lightynode simulator is used for all functional
tests. We no longer need to install it several times before each test
series.
- improve lightynode installation process
- adapt also tox.ini

JIRA: TRNSPRTPCE-813
Change-Id: I380fa9bb2a876e2b3ed083ee335bf004926b262c
Signed-off-by: Gilles Thouenon <gilles.thouenon@orange.com>
(cherry picked from commit 40254b0e7369c6b5be45df88abe77bf2ff2e2962)

--- a/tox.ini
+++ b/tox.ini
@@ -3,14 +3,12 @@ minversion = 3.7.0
 envlist =
      buildcontroller
      testsPCE
-     sims121
+     sims
      build_karaf_tests121
      tests121
-     sims221
      build_karaf_tests221
      tests_tapi
      tests221
-     sims71
      build_karaf_tests71
      tests71
      build_karaf_tests_hybrid
