--- a/features/odl-transportpce-inventory/pom.xml
+++ b/features/odl-transportpce-inventory/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>single-feature-parent</artifactId>
-    <version>13.1.3</version>
+    <version>13.1.4</version>
     <relativePath/>
   </parent>
 
@@ -20,9 +20,9 @@
   <name>OpenDaylight :: transportpce :: Inventory</name>
 
   <properties>
-    <mdsal.version>13.0.4</mdsal.version>
-    <netconf.version>7.0.7</netconf.version>
-    <transportpce.models.version>20.1.2</transportpce.models.version>
+    <mdsal.version>13.0.6</mdsal.version>
+    <netconf.version>7.0.9</netconf.version>
+    <transportpce.models.version>20.2.0-SNAPSHOT</transportpce.models.version>
     <transportpce.db.host>localhost:3306</transportpce.db.host>
     <transportpce.db.database>transportpce</transportpce.db.database>
     <transportpce.db.username>root</transportpce.db.username>
