--- a/renderer/pom.xml
+++ b/renderer/pom.xml
@@ -13,7 +13,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>13.0.4</version>
+    <version>13.0.6</version>
     <relativePath/>
   </parent>
 
@@ -23,7 +23,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <packaging>bundle</packaging>
 
   <properties>
-    <transportpce.models.version>20.1.2</transportpce.models.version>
+    <transportpce.models.version>20.2.0-SNAPSHOT</transportpce.models.version>
   </properties>
 
   <dependencyManagement>
