--- a/features/odl-transportpce-dmaap-client/pom.xml
+++ b/features/odl-transportpce-dmaap-client/pom.xml
@@ -17,7 +17,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>odl-transportpce-dmaap-client</artifactId>
-  <version>10.0.0</version>
+  <version>10.0.1-SNAPSHOT</version>
   <packaging>feature</packaging>
   <name>OpenDaylight :: transportpce :: dmaap-client</name>
 
