--- a/nbinotifications/pom.xml
+++ b/nbinotifications/pom.xml
@@ -17,7 +17,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>transportpce-nbinotifications</artifactId>
-  <version>10.0.0</version>
+  <version>10.0.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
