--- a/test-common/pom.xml
+++ b/test-common/pom.xml
@@ -18,7 +18,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>test-common</artifactId>
-  <version>10.0.0</version>
+  <version>10.0.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
