--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,7 +16,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>transportpce-common</artifactId>
-  <version>10.0.1</version>
+  <version>10.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
