--- a/features/odl-transportpce-inventory/pom.xml
+++ b/features/odl-transportpce-inventory/pom.xml
@@ -15,7 +15,7 @@
 
   <groupId>org.opendaylight.transportpce</groupId>
   <artifactId>odl-transportpce-inventory</artifactId>
-  <version>10.0.1</version>
+  <version>10.1.0-SNAPSHOT</version>
   <packaging>feature</packaging>
   <name>OpenDaylight :: transportpce :: Inventory</name>
 
